adding babel, eslint plugin, webpack loaders

--- a/package.json
+++ b/package.json
@@ -4,23 +4,26 @@
   "description": "starter kit Webpack, Eslint, Babel and React",
   "main": "index.js",
   "scripts": {
-    "babel":    "babel",
-    "webpack":  "webpack",
-    "watch":    "webpack -d --watch",
-    "prod":     "webpack -p",
-    "server":   "webpack-dev-server"
+    "babel": "babel",
+    "webpack": "webpack",
+    "watch": "webpack -d --watch",
+    "prod": "webpack -p",
+    "server": "webpack-dev-server"
   },
-  "author": "",
+  "author": "afjnik hassan",
+  "email": "yecodeo@gmail.com",
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.1.2",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2016": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.7",
+    "babel-preset-stage-0": "^6.24.1",
+    "css-loader": "^0.28.8",
     "eslint": "^4.14.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-import-resolver-node": "^0.3.1",
@@ -28,15 +31,24 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.5.1",
     "file-loader": "^1.1.6",
+    "node-sass": "^4.7.2",
+    "resolve-url-loader": "^2.2.1",
+    "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
     "webpack": "^3.10.0"
   },
   "dependencies": {
+    "axios": "^0.17.1",
+    "babel-polyfill": "^6.26.0",
+    "date-fns": "^1.29.0",
     "html-webpack-plugin": "^2.30.1",
     "path": "^0.12.7",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "babel-polyfill": "^6.26.0",
+    "react-emoji": "^0.5.0",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-promise": "^0.5.3",
     "webpack-dev-server": "^2.9.7"
   }
 }
