--- a/.eslintrc
+++ b/.eslintrc
@@ -5,31 +5,55 @@
     "ecmaVersion": 6,
     "sourceType": "module",
     "ecmaFeatures": {
-        "jsx": true,
-        "modules": true,
-        "experimentalObjectRestSpread": true
-      }
+      "jsx": true,
+      "modules": true,
+      "experimentalObjectRestSpread": true
+    }
   },
   "env": {
     "browser": true
   },
   "rules": {
-    "no-console": "warn",
-    "brace-style": ["error", "stroustrup"],  # accolade
-    "no-param-reassign": ["error", { "props": false }],
-    "no-mixed-operators": ["error", { "allowSamePrecedence": true }],
+    "no-console": "off",
+    "indent": [
+      "error",
+      2,
+      {
+        "SwitchCase": 1
+      }
+    ],
+    "brace-style": [
+      "error",
+      "stroustrup"
+    ],
+    "no-param-reassign": [
+      "error",
+      {
+        "props": false
+      }
+    ],
+    "no-mixed-operators": [
+      "error",
+      {
+        "allowSamePrecedence": true
+      }
+    ],
     "jsx-a11y/no-static-element-interactions": "off",
     "jsx-a11y/href-no-hash": "off",
     "react/jsx-filename-extension": "off",
     "react/forbid-prop-types": "off",
     "react/no-unescaped-entities": "off",
     "react/prefer-stateless-function": "off",
-    "linebreak-style": 0
+    "class-methods-use-this": "off",
+    "linebreak-style": 0,
+    "default-case": "off"
   },
   "settings": {
     "import/resolver": {
       "node": {
-        "paths": ["src/"]
+        "paths": [
+          "src/"
+        ]
       }
     }
   }
