--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "WEBR",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "starter kit Webpack, Eslint, Babel and React",
   "main": "index.js",
   "scripts": {
@@ -27,6 +27,7 @@
     "eslint": "^4.14.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-import-resolver-node": "^0.3.1",
+    "eslint-plugin-babel": "^4.1.2",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.5.1",
@@ -35,20 +36,26 @@
     "resolve-url-loader": "^2.2.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
-    "webpack": "^3.10.0"
+    "webpack": "^3.10.0",
+    "webpack-merge": "^4.1.2"
   },
   "dependencies": {
     "axios": "^0.17.1",
     "babel-polyfill": "^6.26.0",
+    "capitalize": "^1.0.0",
+    "classnames": "^2.2.5",
     "date-fns": "^1.29.0",
     "html-webpack-plugin": "^2.30.1",
     "path": "^0.12.7",
+    "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-emoji": "^0.5.0",
     "react-redux": "^5.0.6",
+    "react-transition-group": "1",
+    "reactstrap": "^4.8.0",
     "redux": "^3.7.2",
     "redux-promise": "^0.5.3",
+    "shortid": "^2.2.8",
     "webpack-dev-server": "^2.9.7"
   }
 }
